--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -27,7 +27,7 @@
 
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  background-image: url(../../common/bg/backgroundDoggee3\ 2.svg);
+  background-image: url(@common/bg/backgroundDoggee3\ 2.svg);
   background-size: cover;
   font-size: 40px;
   font-weight: 800;
