--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -20,7 +20,7 @@
   color: #f7f8f3;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   width: 100%;
   height: 150px;
   padding: 16px;
@@ -46,4 +46,5 @@
   font-size: 12px;
   font-weight: 700;
   cursor: pointer;
+  color: #002c3e;
 }
