--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -8,7 +8,7 @@
 
 .form_container {
   background-color: #f7f8f3;
-  box-shadow: 0px 4px 50px 2px rgba(0, 44, 62, 0.15);
+  box-shadow: 0px 4px 50px 2px #78bcc4;
   border-radius: 20px;
   height: 500px;
   display: flex;
