--- a/src/common/buttons/button/Button.module.css
+++ b/src/common/buttons/button/Button.module.css
@@ -2,7 +2,8 @@
   border-radius: 5px;
   border: none;
   background-color: #78bcc4;
-  color: #ffffff;
+  color: #002c3e;
+  font-weight: 600;
   padding: 10px 80.5px;
   margin-top: 15px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
